2007-03-30  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (blink-matching-open): When in minibuffer, don't
	search for a match inside the prompt.

2007-03-30  Nick Roberts  <nickrob@snap.net.nz>

	* tmm.el (tmm-menubar): Select the right menu item with the mouse.
	(tmm-prompt): Don't make the mouse user select the first menu
	item twice.

2007-03-30  Chong Yidong  <cyd@stupidchicken.com>

	* eshell/esh-proc.el (eshell/kill): Tweak regexp to recognize
	SIGUSR1 and SIGUSR2.

2007-03-29  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-read-internal): When reading file or dir, only override
	minibuffer-local-filename-completion-map, otherwise only override
	minibuffer-local-completion-map.

2007-03-29  Glenn Morris  <rgm@gnu.org>

	* complete.el (partial-completion-mode): Set PC-do-completion-end
	to nil after use.
	(PC-lisp-complete-symbol): Create and use a marker at `end',
	rather than using point-marker.

2007-03-28  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (next-error-highlight): Doc fix.

2007-03-28  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/edebug.el (edebug-display): Don't go to
	edebug-outside-buffer if it is dead.

2007-03-28  Juanma Barranquero  <lekktu@gmail.com>

	* view.el (view-mode): Fix typos in docstring.

2007-03-28  Stephen Berman  <Stephen.Berman@gmx.net>

	* recentf.el (recentf-save-file): Add a custom :set function.

2007-03-28  Glenn Morris  <rgm@gnu.org>

	* complete.el (PC-do-completion-end): New variable.
	(partial-completion-mode) <choose-completion-string-functions>:
	Use PC-do-completion-end in the non-minibuffer case to replace the
	correct amount of text.
	(PC-do-completion): Set PC-do-completion-end for c-c-s-f.
	(PC-lisp-complete-symbol): Give marker the after-insertion type,
	to deal with improvements inserted after point.

2007-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* button.el (make-text-button): Add explicit `button' property.
	(default-button): Don't put a `button' property on it.
